--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('includes/head.ejs'); %>
-    <title>SIMPIC 2020</title>
+    <title>SIMPICSED</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" integrity="sha256-2bAj1LMT7CXUYUwuEnqqooPb1W0Sw0uKMsqNH0HwMa4=" crossorigin="anonymous" />
   </head>
   <body>
@@ -91,14 +91,11 @@
           <div class="col-12">
             <div class="contents text-center">
               <img src="https://storage.googleapis.com/simpic-web.appspot.com/public/simpic_logo.png" style="width: 100%; max-width: 420px; padding-bottom:0px">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">SIMPIC 2020</h1>
-              <!-- <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Siriraj International medical Microbiology, Parasitology and Immunology Competition -->
+              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">SIMPICSED</h1>
+              <p class="lead wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.4s">Siriraj International Medical Microbiology, Parasitology and Immunology Competition Special Edition 2021 in partnership with IFMSA-Thailand
                 <!-- <br/> -->
                 <!-- Get more information from our Invitation Package! -->
                 <p class="lead wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">
-                  <span style="display: none;">Dear prospective participants of SIMPIC 2020,<br>
-                  SIMPIC 2020 is going to be held on March 13-16, 2020<br>
-                  Save the date! & Find out more here 👇🏻</span></p>
               <!-- <a href="https://drive.google.com/open?id=1Q5d1-i9ZAqQJxGv1ibMj1VYb99v6zAGp" target="_blank" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Survival Guide</a>
               <a href="https://drive.google.com/file/d/1jZGXKQm68F-Bm6KmmYKSQsa_d3Yj8jSc/view?usp=drivesdk" target="_blank" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Rulebook</a> -->
               <a href="https://drive.google.com/drive/folders/1gA2A9bZJqfPreboW2YzYMBphF_yhwjSv" target="_blank" class="mx-3 btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Invitation Package</a>
@@ -208,7 +205,7 @@
                     </span>
                     <div class="text info-text">
                       <h4>Registration</h4>
-                      <p>How you can be a part of, our precious and proudly presented, SIMPIC 2020 !</p>
+                      <p>How you can be a part of, our precious and proudly presented, SIMPICSED!</p>
                     </div>
                     </a>
                   </div>
@@ -219,7 +216,7 @@
                     </span>
                     <div class="text info-text">
                       <h4>Competition</h4>
-                      <p>The rules of our competition. Not only educating but also entertaining !</p>
+                      <p>The rules of our competition. Not only educating but also entertaining!</p>
                     </div>
                     </a>
                   </div>
@@ -330,7 +327,7 @@
                 <i class="lnr lnr-clock"></i>
               </div>             
               <div class="fact-count">
-                <h3><span class="counter">9</span></h3>
+                <h3><span class="counter">10</span></h3>
                 <h4>Years of events</h4>
               </div>
             </div>
@@ -387,8 +384,8 @@
               <img src="https://storage.googleapis.com/simpic-web.appspot.com/public/president.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Nithipong & Kayvalvn</h4>
-                  <h6 class="text-muted">President of SIMPIC 2020</h6>
+                  <h4 class="team-title">Pranaidej & Suyada</h4>
+                  <h6 class="text-muted">President of SIMPICSED</h6>
                   <p>The long wait is almost over. Our beloved annual competition, SIMPIC, is coming once again!</p>
                   <!-- <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -480,7 +477,7 @@
           </div>
           <div class="col-lg-6 col-sm-6 col-12">
             <div class="copyright">
-              <p>All copyrights reserved &copy; 2019 - Theme: UIdeck</p>
+              <p>Copyright &copy; 2020 SIMPICSED. All rights reserved. - Theme: UIdeck</p>
             </div>
           </div>
         </div>
