--- a/views/information/accommodation.ejs
+++ b/views/information/accommodation.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('../includes/head.ejs'); %>
-    <title>Accommodation - SIMPIC 2020</title>
+    <title>Accommodation - SIMPICSED</title>
   </head>
   <body>
     <%- include('nav.ejs'); %>
@@ -12,12 +12,13 @@
       <div class="row justify-content-center">
         <div class="col col-lg-9">
           <br><br>
-          <h5>Accommodation</h5><hr>
+          <h5>Accommodation [Optional]</h5>
+          <hr/>
           <br>
           <img src="https://storage.googleapis.com/simpic-web.appspot.com/public/accomodation.jpg" alt="SD Avenue hotel" style="width: 100%;">
           <br><br><br>
           <p>Participants will be accommodated at the SD Avenue Hotel, a luxury hotel right on the center of Pinklao distinct where many shopping malls located. We will have our staff positioned at the hotel all day and night for your comfortable stay. Transportation will be available only between hotel and competition venue, which are provided daily at scheduled time. 
-          SD Avenue Hotel will be the only accommodation during this competition. Certainly, <u>the hotel cost is already included in the registration fee</u> 
+          Hotel cost is not included in the registration fee: however we have made contact with the hotel for an affordable price for all contestants.
           Additional information on booking and payment will be available soon!</p>
           <br>
           <!-- <strong>ATTENTION PLEASE!!</strong><br><br>
