--- a/views/information/activities.ejs
+++ b/views/information/activities.ejs
@@ -7,7 +7,7 @@
         max-width: 100%;
       }
     </style>
-    <title>Activities - SIMPIC 2020</title>
+    <title>Activities - SIMPICSED</title>
   </head>
   <body>
     <%- include('nav.ejs'); %>
@@ -16,86 +16,36 @@
     <div class="container pt-4">
       <div class="row justify-content-center">
         <div class="col col-lg-9">
-          <br><br>
-      <h5>Experience Bangkok</h5><hr>
-<br>
-<br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/sight.jpg">
-<br>
-<br>
 
+<h4>Get into the world of COVID-19 through our exclusive workshop!</h4><hr/>
 <p>
-  Hearing about “Thailand” you might think of amazing dishes, bustling shopping centers, unique culture, exquisite temples or maybe simply Thais’ smiles and kindness. It is true that you can experience them while traveling on your own. But what if you can get through all of them with authentically Thai people! That is why in SIMPIC, we highly recommend this program to you, the “Sightseeing Tour.”
-In this course, you will uncover the unseen and surprising things which are hidden in many places exclusively chosen by us. You will get a chance to choose the places in provided routes in order to make sure that your trip will definitely fit your desire. Above all, traveling in a half-day tour in Bangkok with your foreign accompanies will surely be the most memorable experience!
-So, do not miss this “Sightseeing Tour” and see you in SIMPIC2020! We are all waiting to welcome you to Thailand
+  Do you know the secret behind Thai COVID-19 success?<br/>
+  Learn how Thailand deals with the pandemic in the lecture by Pr. Dr. Prasit Watanapa, dean of our faculty, and the adviser for Thai government to tackle the COVID-19 crisis.
 </p>
-<br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/sight2.jpg">
-<br><br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/sight3.jpg">
-<br><br>
-<br><br><br><br>
-
-<h5>Experience Thai Cultures & Foods</h5><hr>
-<br>
-<br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/village.jpg">
-<br>
-<br>
-
 <p>
-  Thailand is famous of its culture which accumulated for thousand of years. SIMPIC will bring you a Thai traditional culture, where you will enjoy various Thai activities, games, performances and especially foods that you cannot find anywhere else.
-Identically, SIMPIC is famous for its lines of authentic Thai food. As Thai people, we can never let our guests leave without a contented belly. All lunch and dinner, provided during the competition, have been selected and prepared from north to south, west to east provinces all around. With a little spicy kick, rich herbal aroma, and exotic tropical fruits, the dining experience is sure to give you a lot of surprises! 
-<br><br>
-Be prepared for the gastronomic wonder!
+  Experience the life of COVID-19 staffs through hands-on activities<br/>
+  Learn how to save life and in the mean time, save yourself by using PPE properly. Get to know more about laboratory investigation and diagnosis. Practice the skills that you might need in this epidemic.
 </p>
-<br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/village2.jpg">
-<br><br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/village3.jpg">
-<br><br>
-<br><br>
-<br><br>
-
-<h5>Experience Siriraj</h5><hr>
-<br>
-<br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/hospital1.jpg">
-<br>
-<br>
-
 <p>
-  Siriraj hospital stands as the national hospital and medical school for more than 120 years. Siriraj hospital houses famous museums and must-see places which are always visited by a lot of tourists both from Thailand and other countries.
-<br><br>
-Let us give you a warm welcome with an exclusive trip throughout the hospital. From museum with fascinating exhibitions to laboratory where students are trained with state-of-the-art educational technologies. You will be shown around these locations for free of charge by our guides who will kindly provide you with information.</p>
-<br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/hospital2.jpg">
-<br><br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/hospital3.jpg">
-<br><br>
-<br><br>
-<br><br>
+  Bored of being a medical staff?<br/>
+  Become a part of the strategic team who integrates all knowledge in order to protect your nation from economic recession while balancing public health priorities. Who knows, your team might be the one who brainstorm out the best infectious disease measure in the world!
+</p>
+<br/>
+<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/hospital2.jpg" alt="workshop" style="width: 100%;">
+<br/>
+<br/>
+<br/>
 
-<h5>Creative activities</h5><hr>
-<br>
-<br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/creative1.jpg">
-<br>
-<br>
-
-<p>Relax and Have fun! See the beauty of diversity. Cultivate the relationship that you will not be able to get anywhere. Create a wonderful day with your friends.</p>
-<br><br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/creative2.jpg">
-<br><br>
-<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/creative3.jpg">
-<br><br>
-<br><br>
-<br><br>
-
-</ol>
+<h4>Parties</h4><hr/>
+<p>
+After a long day of intensive competition, there is nothing better than wrapping up your day with the ‘PARTIES’. Unwind by taking in the stunning panoramic view of Chao Phraya river, the lifeblood of Bangkokians. Enjoy the unforgettable moments only available at our private parties with exquisite shows as well as meeting new friends from all around the globe. DO NOT MISS!!
+</p>
+<br/>
+<img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/parties.jpg" alt="parties" style="width: 100%;">
         </div>
       </div>
     </div>
+    <br/>
     <%- include('../includes/body.ejs'); %>
   </body>
 </html>
