--- a/views/information/competition.ejs
+++ b/views/information/competition.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('../includes/head.ejs'); %>
-    <title>Competition - SIMPIC 2020</title>
+    <title>Competition - SIMPICSED</title>
   </head>
   <body>
     <%- include('nav.ejs'); %>
@@ -15,37 +15,10 @@
 <br><h4>Competition Rules</h4>
 <hr>
 
-<!-- <div class="alert alert-info" role="alert">
-<b>Full rulebook of SIMPIC 2019 <br/></b>
-
-<a href='#'>Download here <span class="lnr lnr-download"></span></a>
-</div>
-<br>
-
-<b>First Round</b><br/>
-The examination consists of 2 parts.<br/>
-<ol>
-    <li>The first part contains 60 multiple-choice questions (55 one-best-answer questions and 5 multiple-answer questions.) This part will account for 65% of the individual score. The contestants will take this part of the exam individually.</li>
-    <li>The second part is a case-based examination, consisting of 3 cases. This part will account for 35% of the individual score. The questions will be written-answer questions. Contestants will take this part of the exam as a team and be allowed to discuss with one another.</li>
-</ol>
-
-<b>Revival Round</b><br>
-Teams that do not qualify for the second round will have another chance in the Revival Round. This round consists of 40 true-false questions. Two points will be given for a correct answer and one point will be deducted for an incorrect answer.
-<br><br>
-<b>Second Round</b><br>
-From now on, the competition will be held on the stage. This round is divided into 3 main sessions, with 8 teams competing at a time. There are 9 questions in each session. The teams will have 60 seconds to answer each question on the electronic device. Points will be given to the team with a correct answer regarding to the time remaining. The last ranking team will be eliminated at the end of 5th and 7th question. By the end of 3 sessions, an extra session will be held for the 4th-ranking teams of each session.
-<br><br>
-<b>Semi-final Round</b><br>
-The competition is divided into two sessions, which is further divided into four rounds. For each round, every team has to send one representative to the buzzer. Questions will be selected by each representative and need to be answered within 15 seconds. If the answer is correct, the team will be given 3 points. If not, no point will be deducted and other representatives will get a chance to steal and answer that question within 10 seconds. A correct answer will earn the team 2 points while an incorrect answer will cost the team 1 point. The competition wil be continued in the same manner. 
-<br><br>
-<b>Final Round</b><br>
-In this round, there will be 15 written-answer questions, with 60 seconds for each question. If the answer is correct, the team will be given 10 points. If the answer is incorrect, 20% of the total score at that time will be deducted. The team with the highest score will be the winner of SIMPIC 2019.
-    </p>
-<br><br> -->
 <img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/competition1.png" style="width: 100%;">
 <img src="https://storage.googleapis.com/simpic-web.appspot.com/public/information/competition2.png" style="width: 100%;">
-<br><br>
-<p>For more information, please keep eyes on our SIMPIC 2020 Rule book that is going to be published soon.</p>
+<!-- <br><br>
+<p>For more information, please keep eyes on our SIMPIC 2020 Rule book that is going to be published soon.</p> -->
         </div>
       </div>
     </div>
