--- a/views/information/registration.ejs
+++ b/views/information/registration.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('../includes/head.ejs'); %>
-    <title>Registration - SIMPIC 2020</title>
+    <title>Registration - SIMPICSED</title>
   </head>
   <body>
     <%- include('nav.ejs'); %>
@@ -11,116 +11,196 @@
     <div class="container pt-4">
       <div class="row justify-content-center">
         <div class="col col-lg-9">
-          <br><h4>Registration</h4>
+          <h4>Registration process</h4>
           <hr>
-          There are two ways to participate in SIMPIC 2020.
+          <p>All information related to dates and times stated below is based on GMT+7 time zone (local time in Thailand). Please note that the process will be done through our <a href="https://www.simpicofficial.org" target="_blank">official website</a></p>
+          <p>Upon the account registration, you will receive the username and password, which will be used throughout the application process.</p>
           <br/>
+
+          <h4>The competition date</h4>
+          <hr>
+          <p>The SIMPICSED will be held during 12-14 MARCH 2021.</p>
           <br/>
+
+          <h4>Competition Criteria</h4>
+          <hr/>
+          <p>Only medical students, either in preclinical or clinical years, are eligible to apply for the competition.</p>
+          <p>Thai medical schools: Each medical school can apply a maximum of 3 representative teams, 1 team for online competition and 2 teams for on-site competition. The representative teams Each team must consist of 4 medical students, and (optional) 1 advisor.</p>
+          <p>International medical schools: Each medical school can apply a maximum of 3 representative teams. Due to COVID-19, All of the representative teams are required to compete in the online competition. However, if the COVID-19 situation is alleviated and the representatives accept all the quarantine conditions and government issues, you may request a change to on-site competition within Jan 3, 2021. Each representative team must consist of 4 medical students, and (optional) 1 advisor.</p>
+          <p>Notably, as an official partner with IFMSA-Thailand, IFMSA members from any NMO will be given special quotas to attend the competition. Due to COVID-19, All of the representative teams are required to compete in the online competition. However, if the COVID-19 situation is alleviated and the representatives accept all the quarantine conditions and government issues, you may request a change to on-site competition within Jan 3, 2021. Each NMO can send a maximum of 3 representative teams, consisting of 4 medical students from any medical school from the NMO region.</p>
+          <p>*The substitution of candidates after registration is not permitted without necessity.</p>
+          <br/>
+
+          <h4>On-site competition</h4>
+          <hr/>
+          <br/>
+
+          <h6><b>Registration Timeline</b></h6>
+          <p>Early period : Nov 8 - Nov 21, 2020 Registration fee 9600 THB (approximately 300 USD)</p>
+          <p>Regular period : Nov 22 - Dec 19, 2020 Registration fee 10080 THB  (approximately 315 USD)</p>
+          <p>Announcement of qualified teams : Jan 3, 2021</p>
+          <p>Payment period and extra information : Jan 4 - Jan 22, 2021</p>
+          <p>Payment must be made via PayPal or International transfer within the payment period. (Payment confirmation in the official website within 10 days upon the proof of payment submission.)</p>
+          <p>Extra information submission: you will be required to fill in the extra information within the same period as payment.</p>
+          <p>Official announcement of competitor list: Jan 24, 2021</p>
+          <p>* Due to our limited seat, qualified applicants will be selected based on the motivation letter and the short essay submitted.</p>
+          <br/>
+
+          <h6><b>Registration fee</b> covers the following expenses</h6>
+          <ul>
+            <li>Academic competition, workshop and parties</li>
+            <li>Transportation between the hotel and the competition venue is provided daily at the scheduled time.</li>
+            <li>Meals and snack breaks during the competition and two special parties, welcome and farewell parties.</li>
+          </ul>
+          <p>* Registration fee excludes the flight tickets and transportation neither leaving nor arriving at the airport. Importantly, we recommend you to book a return flight on Mar 15, 2021.</p>
+          <br/>
+
+          <h6><b>Require Documents</b></h6>
           <ol>
-            <li>If you want to challenge yourself and compete with medical students from all over the world, you can talk it out with your friends and join us as a team of 4 medical students and 1 (optional) advisor. <i>Maximum of one representative team per medical school is allowed to register for the competition.</i></li>
-            <li>If you are interested in SIMPIC, but not in the competition, you can join us as an observer to root for the teams from your school, take part in memorable activities, and bring lots of smiles back home :)</li>
+            <li>A statement verifying your status as representatives from your medical school [for team represents medical school] or your IFMSA-NMO [for team represents IFMSA-NMO]</li>
+            * The statement form can be downloaded from our official website.
+            <li>A motivation letter from each applying team expressing your goal for joining the competition. [Less than 150 words]</li>
+            <li>A short essay responding to the question [Less than 200 words]:</li>
+            “Explain the underlying mechanism in COVID-19 Reinfection in severely reinfected cases and how this phenomenon may affect the vaccine efficiency?”
           </ol>
           <br/>
-          Only around 50 teams will be selected to join the competition based on their responses on short essays and motivation letters.
+
+          <h4>Observer</h4>
+          <hr/>
+          <p>We welcome all observers, from every institute to participate in SIMPICSED. There is no limit on the number of participation observers per medical school.</p>
+          <p>Due to COVID-19, observers are allowed to join only the on-site stage round competition. However, it is free!</p>
           <br/>
-          <br/>
-          An observer can be anyone at all and doesn't have to belong to any medical school.
-          <br/>
-          <br/>
-          Registration and payment will be done online. Each team or observer is required to sign up an account. Once you create your account, sign in and fill out the application. Please remember your username and password as you will have to log in to your account again during the payment period. One account is only for one team or one observer.
-          <br/>
-          <br/>
-          <br/>
+          
+          <h4>Online competition</h4>
+          <hr/>
+          <h6><b>Registration Timeline</b></h6>
+          <p>Early period : Nov 8 - Nov 21, 2020 Registration fee 3200 THB (approximately 100 USD)</p>
+          <p>Regular period : Nov 22 - Dec 19, 2020 Registration fee 3840 THB (approximately 120 USD)</p>
+          <p>Announcement of qualified teams : Jan 3, 2021</p>
+          <p>Payment period : Jan 4 - Jan 22, 2021</p>
+          <p>Payment must be made via PayPal or International transfer within the payment period. (Payment confirmation in the official website within 10 days upon the proof of payment submission.)</p>
+          <p>* Due to our limited seat, qualified applicants will be selected based on the motivation letter and the short essay submitted.</p>
           <br/>
 
-          <h4>Documents</h4>
-          <hr>
+          <h6><b>Require Documents</b></h6>
+          <ol>
+            <li>A statement verifying your status as representatives from your medical school or NMO-IFMSA.</li>
+            * The statement form can be downloaded from our official website.<br/>
+            * If you prefer to change to on-site competition, you must submit the following documents within Dec 19, 2021. The approved team, announced on Jan 3, are allowed to choose either on-site or online competition within Jan 22, 2021.
+            <li>A motivation letter from each applying team expressing your goal for joining the competition. [Less than 150 words]</li>
+            <li>A consent letter for state quarantine conditions and government issues.</li>
+            * The consent letter form can be downloaded from our official website.
+            <li>A short essay responding to the question [Less than 200 words]:</li>
+            “Explain the underlying mechanism in COVID-19 Reinfection in severely reinfected cases and how this phenomenon may affect the vaccine efficiency?”
+          </ol>
 
-          In order to complete your application, you are required to upload these three documents.
+          <h6><b>Regulation for COVID-19 situation</b></h6>
+          <p>Here are our plans if there is the 2nd wave of COVID-19 during the registration period.</p>
+          <ol>
+            <li>If the COVID-19 outbreak in Thailand is controlled, the competition will be held as a hybrid with a maximum of 40 teams for on-site competition welcoming up to 10 of International travelable teams.</li>
+            * This decision will be announced within Jan 3, 2021
+            <li>If there is the second-wave in January to March or an outbreak in Siriraj hospital, all competition will shift to online competition. The paid-team will be refunded the difference. </li>
+            * The decision is when the government announced not to hold such a meeting or conference.
+          </ol>
           <br/>
-          <br/>
 
-          <div class="alert alert-info" role="alert">
-            <strong>Letter of Approval</strong><br/>
+          <h6><b>On-site regulation</b></h6>
+          <p>Due to the COVID-19 situation, our team concerns a lot about our delegates' safety. Here are our regulations for COVID-19 situations in the on-site SIMPICSED.</p>
+          <ol>
+            <li>Keep social distancing</li>
+            We limited the participant teams which will be social distancing enough in the auditory hall.
+            <li>Wear face mask</li>
+            We offer a face mask for every delegate in our event, in order to limit the spread of certain respiratory diseases, including SARS-CoV-2.
+            <li>Use alcohol gel</li>
+            For your hygiene, there will be alcohol gel everywhere in SIMPICSED.
+            <li>Cleaning routine</li>
+            We keep hygiene for all our stuffs in SIMPIC regularly.
 
-            A statement verifying your status as representatives from your medical school. You will need approval to confirm that your team is the official representative of your school. 
-            <a href="https://drive.google.com/file/d/1GnsxorMmmfJNVriA7mkPISpFP9zTrVLz/view" target="_blank" onclick="gtag('event', 'views', {event_category: 'PDF', event_label: 'Letter of Approval'});">Download form</a>
-            <br><br>
-            <i>The file should be uploaded in pdf or jpg format</i>
-          </div>
+          </ol>
 
-          <div class="alert alert-info" role="alert">
-            <strong>Motivation Letter</strong><br>
+          <!--
+            <div class="alert alert-info" role="alert">
+              <strong>Letter of Approval</strong><br/>
 
-            A motivation letter expressing goals for joining the competition. Please tell us why you want to be a part of SIMPIC family and how this would enhance your international experience.
-            <br><br>
-            <i>The file should be uploaded in pdf or jpg format</i>
-          </div>
+              A statement verifying your status as representatives from your medical school. You will need approval to confirm that your team is the official representative of your school. 
+              <a href="https://drive.google.com/file/d/1GnsxorMmmfJNVriA7mkPISpFP9zTrVLz/view" target="_blank" onclick="gtag('event', 'views', {event_category: 'PDF', event_label: 'Letter of Approval'});">Download form</a>
+              <br><br>
+              <i>The file should be uploaded in pdf or jpg format</i>
+            </div>
 
-          <div class="alert alert-info" role="alert">
-            <strong>Short Essay</strong><br>
+            <div class="alert alert-info" role="alert">
+              <strong>Motivation Letter</strong><br>
 
-            Each team is required to write an essay of 500 words or less responding to the following questions:
-            <br><br>
+              A motivation letter expressing goals for joining the competition. Please tell us why you want to be a part of SIMPIC family and how this would enhance your international experience.
+              <br><br>
+              <i>The file should be uploaded in pdf or jpg format</i>
+            </div>
+
+            <div class="alert alert-info" role="alert">
+              <strong>Short Essay</strong><br>
+
+              Each team is required to write an essay of 500 words or less responding to the following questions:
+              <br><br>
+              <ol>
+                <li class="mb-2">If you are assigned to organize vaccination program for medical students in your own country, which kind of vaccine do you think is the most crucial, and is there any additional vaccination that should be considered? State your reasons and opinions.</li>
+                <li>How do you think vaccination program for medical students can support and assist in preventive strategy in controlling infectious diseases?</li>
+              </ol>
+              <i>The file should be uploaded in pdf format</i>
+            </div>
+            <br><br><br>
+
+            <h4>Fees</h4>
+            <hr>
+            <div class="alert alert-info" role="alert">
+              <strong>Team</strong>
+              <br>
+              Early period: Oct 01 - Oct 07, 2019
+              790 USD* or 24,500 THB* per team
+              <br>
+              Regular period: Oct 08 - Oct 21, 2019
+              850 USD* or 26,500 THB* per team
+            </div>
+
+            <div class="alert alert-info" role="alert">
+              <strong>Observer</strong>
+              <br>
+              360 USD* or 11,500 THB* per person
+            </div>
+            The registration fees cover the following expenses:
             <ol>
-              <li class="mb-2">If you are assigned to organize vaccination program for medical students in your own country, which kind of vaccine do you think is the most crucial, and is there any additional vaccination that should be considered? State your reasons and opinions.</li>
-              <li>How do you think vaccination program for medical students can support and assist in preventive strategy in controlling infectious diseases?</li>
+              <li>Sightseeing</li>
+              <li>All meals and snacks</li>
+              <li>Hotel for 4 nights during Mar 13-17, 2020</li>
+              <li>Transportation between SD Avenue Hotel and Siriraj Hospital</li>
+              <li>Workshops and recreations</li>
+              <li>Cultural and other interesting activities</li>
             </ol>
-            <i>The file should be uploaded in pdf format</i>
-          </div>
-          <br><br><br>
 
-          <h4>Fees</h4>
-          <hr>
-          <div class="alert alert-info" role="alert">
-            <strong>Team</strong>
-            <br>
-            Early period: Oct 01 - Oct 07, 2019
-            790 USD* or 24,500 THB* per team
-            <br>
-            Regular period: Oct 08 - Oct 21, 2019
-            850 USD* or 26,500 THB* per team
-          </div>
+            <p>* Registration fee excludes the flight tickets and transportation neither leaving nor arriving to the airport. Importantly, we recommend you to book a return flight on Mar 17, 2020 or later.</p>
 
-          <div class="alert alert-info" role="alert">
-            <strong>Observer</strong>
-            <br>
-            360 USD* or 11,500 THB* per person
-          </div>
-          The registration fees cover the following expenses:
-          <ol>
-            <li>Sightseeing</li>
-            <li>All meals and snacks</li>
-            <li>Hotel for 4 nights during Mar 13-17, 2020</li>
-            <li>Transportation between SD Avenue Hotel and Siriraj Hospital</li>
-            <li>Workshops and recreations</li>
-            <li>Cultural and other interesting activities</li>
-          </ol>
+            <div class="alert alert-danger" role="alert">
+              The payment must be made via PayPal or international money transfer during the payment period (Payment confirmation on the official website within 10 days upon the proof of payment submission). Late payment may lead to disqualification.
+            </div>
+            <br><br>
 
-          <p>* Registration fee excludes the flight tickets and transportation neither leaving nor arriving to the airport. Importantly, we recommend you to book a return flight on Mar 17, 2020 or later.</p>
+            <h4>Timeline</h4>
+            <hr>
+            <div class="alert alert-info" role="alert">
+              <strong>Team</strong>
+              <br>
+              Announcement of qualified teams: Nov 25, 2019<br>
+              Payment period and extra information submission: Nov 26 - Dec 24, 2019<br>
+              Official announcement of competitors list: Dec 25, 2019<br>
+            </div>
 
-          <div class="alert alert-danger" role="alert">
-            The payment must be made via PayPal or international money transfer during the payment period (Payment confirmation on the official website within 10 days upon the proof of payment submission). Late payment may lead to disqualification.
-          </div>
-          <br><br>
+            <div class="alert alert-info" role="alert">
+              <strong>Observer</strong>
+              <br>
+              Application period: Oct 01 - Dec 16, 2019<br>
+              Payment period: Nov 26 - Dec 24, 2019<br>
 
-          <h4>Timeline</h4>
-          <hr>
-          <div class="alert alert-info" role="alert">
-            <strong>Team</strong>
-            <br>
-            Announcement of qualified teams: Nov 25, 2019<br>
-            Payment period and extra information submission: Nov 26 - Dec 24, 2019<br>
-            Official announcement of competitors list: Dec 25, 2019<br>
-          </div>
-
-          <div class="alert alert-info" role="alert">
-            <strong>Observer</strong>
-            <br>
-            Application period: Oct 01 - Dec 16, 2019<br>
-            Payment period: Nov 26 - Dec 24, 2019<br>
-
-          </div>
+            </div>
+          -->
         </div>
       </div>
     </div>
