--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('includes/head.ejs'); %>
-    <title>Reviews - SIMPIC 2020</title>
+    <title>Reviews - SIMPICSED</title>
   </head>
   <body>
     <div id="fb-root"></div>
