--- a/views/form/status.ejs
+++ b/views/form/status.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <%- include('../includes/head.ejs'); %>
-    <title>Dashboard - SIMPIC 2020</title>
+    <title>Dashboard - SIMPICSED</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" integrity="sha256-2bAj1LMT7CXUYUwuEnqqooPb1W0Sw0uKMsqNH0HwMa4=" crossorigin="anonymous" />
     <style>
@@ -21,7 +21,7 @@
     <div class="container">
       <br><br>
       <h2>Dashboard - Team #<%= user.get('code') %></h2>
-      <p class="text-muted">Team #<%= user.get('code') %></p>
+      <p class="text-muted">Team #<%= user.get('code') %> - <%= user.get('locale') %> medical school</p>
 
       <%
         let status = user.get('status') || [];
@@ -39,7 +39,7 @@
         <tbody>
           <tr>
             <th scope="row"></th>
-            <td><b>Application period (Oct1 - Oct21, 2019)</b></td>
+            <td><b>Application period (Nov8 - Dec19, 2020)</b></td>
             <td></td>
           </tr>
           <%
@@ -78,31 +78,32 @@
           </tr>
           <tr>
             <th scope="row"></th>
-            <td><b>Payment period (Nov26 - Dec24, 2019)</b></td>
+            <td><b>Payment period (Jan4 - Jan22, 2021)</b></td>
             <td></td>
           </tr>
           <tr>
             <th scope="row">5</th>
-            <td><a href="http://www1.si.mahidol.ac.th/division/conference/conference/sm_login.php?sm_id=838&menu=1" target="_blank">Payment</a></td>
+            <td>
+              <!-- <a href="http://www1.si.mahidol.ac.th/division/conference/conference/sm_login.php?sm_id=838&menu=1" target="_blank">Payment</a> -->
+              Payment
+            </td>
             <td><%- user.get('payment') == 'Paid' ? '<span style="color: green">Paid</span>' : '<span style="color: orange">Unpaid</span>' %></td>
           </tr>
           <tr>
             <th scope="row"></th>
-            <td><b><a href="https://docs.google.com/forms/d/1v6Zmg9wk9F7BdylsCcQrvcnpcj3ekTIhQbsQ6SakJDw/edit?usp=sharing">Extra information</a></b></td>
+            <td><b>
+              <!-- <a href="https://docs.google.com/forms/d/1v6Zmg9wk9F7BdylsCcQrvcnpcj3ekTIhQbsQ6SakJDw/edit?usp=sharing">Extra information</a> -->
+              Extra information</b>
+            </td>
             <td></td>
           </tr>
           <tr>
             <th scope="row">6</th>
-            <td>Sightseeing route</td>
-            <td><%- extra[0] == 'true' ? '<span style="color: green">Confirmed</span>' : '<span style="color: orange">Complete <a href="https://docs.google.com/forms/d/1v6Zmg9wk9F7BdylsCcQrvcnpcj3ekTIhQbsQ6SakJDw/edit?usp=sharing">here</a></span>' %></td>
-          </tr>
-          <tr>
-            <th scope="row">7</th>
             <td>Flight information</td>
             <td><%= extra[1] || 'N/A' %></td>
           </tr>
           <tr>
-            <th scope="row">8</th>
+            <th scope="row">7</th>
             <td>Your accomodation</td>
             <td><%= extra[2] || 'N/A' %></td>
           </tr>
@@ -119,12 +120,14 @@
             $(self).addClass('active');
           }, 500);
         });
+
+        /* 
         <%
         if (user.get('payment') != 'Paid') {
           if (user.get('type') == 'early') {
         %>
             Swal.fire(`Congratulations`, 
-`Your team has been selected to participating in SIMPIC 2020.<br>
+`Your team has been selected to participating in SIMPICSED.<br>
 Please complete the following tasks within December 24, 2019 to confirm your participations.<br>
 1) Make the payment of the registration fee through <a href="http://www1.si.mahidol.ac.th/division/conference/conference/sm_login.php?sm_id=838&menu=1">this link</a> and Your team registration fee is <b><u>24,500 Baht</u></b><br> 
 2) Complete the Additional information form via <a href="https://docs.google.com/forms/d/1v6Zmg9wk9F7BdylsCcQrvcnpcj3ekTIhQbsQ6SakJDw/edit?usp=sharing">this link</a> including selection of the sightseeing routes<br>
@@ -133,7 +136,7 @@ Please complete the following tasks within December 24, 2019 to confirm your par
           } else if (user.get('type') == 'regular') {
         %>
             Swal.fire(`Congratulations`,
-`Your team has been selected to participating in SIMPIC 2020.<br>
+`Your team has been selected to participating in SIMPICSED.<br>
 Please complete the following tasks within December 24, 2019 to confirm your participations.<br>
 1) Make the payment of the registration fee through <a href="http://www1.si.mahidol.ac.th/division/conference/conference/sm_login.php?sm_id=838&menu=1">this link</a> and Your team registration fee is <b><u>26,500 Baht</u></b><br> 
 2) Complete the Additional information form via <a href="https://docs.google.com/forms/d/1v6Zmg9wk9F7BdylsCcQrvcnpcj3ekTIhQbsQ6SakJDw/edit?usp=sharing">this link</a> including selection of the sightseeing routes<br>
@@ -141,7 +144,7 @@ Please complete the following tasks within December 24, 2019 to confirm your par
         <%
           } else if (user.get('type') == 'observer') {
         %>
-            Swal.fire(`Almost Complete to be participating in SIMPIC 2020 as an Observer.`,
+            Swal.fire(`Almost Complete to be participating in SIMPICSED as an Observer.`,
 `Please complete the following tasks within December 24, 2019 to confirm your participations.<br>
 1) Make the payment of the registration fee through <a href="http://www1.si.mahidol.ac.th/division/conference/conference/sm_login.php?sm_id=838&menu=1">this link</a> and Your registration fee is <b><u>11,500 Baht</u></b><br>
 2) Complete the Additional information form via <a href="https://docs.google.com/forms/d/1v6Zmg9wk9F7BdylsCcQrvcnpcj3ekTIhQbsQ6SakJDw/edit?usp=sharing">this link</a> including selection of the sightseeing routes<br>
@@ -150,6 +153,7 @@ Please complete the following tasks within December 24, 2019 to confirm your par
           }
         }
         %>
+        */
       });
     </script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
