--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('includes/head.ejs'); %>
-    <title>Register/Login - SIMPIC 2020</title>
+    <title>Register/Login - SIMPICSED</title>
   </head>
   <body>
     <!-- Header Section Start -->
@@ -82,6 +82,16 @@
               <input type="password" class="form-control" id="passwordConfirmInput" placeholder="Confirm password" name="passwordConfirm" required>
               <div class="invalid-feedback">
                 Password not match
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="locale" id="locale1" value="Thai" required>
+                <label class="form-check-label" for="locale1">Thai</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="locale" id="locale2" value="International" required>
+                <label class="form-check-label" for="locale2">International</label>
               </div>
             </div>
             <input name="token" id="token" class="is-valid" style="display:none;">
